--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,8 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.1.3",
+    "redux-promise": "^0.6.0",
     "tailwindcss": "^2.0.2",
-    "underscore": "^1.12.0",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^0.2.4"
   },
