--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,18 @@
     "dayjs": "^1.10.4",
     "jquery": "^3.5.1",
     "postcss": "^8.2.4",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-promise": "^0.6.0",
     "tailwindcss": "^2.0.2",
+    "text-mask-addons": "^3.8.0",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^0.2.4"
   },
@@ -47,5 +50,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
